# lenso-auth-module

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tegami.config.mjs  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  publish.yml  release-plan.yml  release.yml
.lenso-release/: config.json  plan.json  template-manifest.json
.superpowers/sdd/: task-3-report.md
.tegami/: m6-auth-foundation.md  publish-lock.yaml
crates/auth/: CHANGELOG.md  Cargo.toml
crates/auth-anonymous/: CHANGELOG.md  Cargo.toml
crates/auth-anonymous/src/: dto.rs  lib.rs  migrations.rs  module.rs  repositories.rs  routes.rs
crates/auth-anonymous/tests/: anonymous_sign_in.rs
crates/auth-device/: CHANGELOG.md  Cargo.toml
crates/auth-device/migrations/: 0001_create_auth_device_schema.sql  0002_add_device_client_metadata.sql
crates/auth-device/src/: admin.rs  lib.rs  migrations.rs  module.rs  policy.rs  repositories.rs
crates/auth-device/tests/: device_policy.rs
crates/auth-github/: CHANGELOG.md  Cargo.toml
crates/auth-github/migrations/: 0001_create_auth_github_schema.sql  0002_create_github_accounts.sql
crates/auth-github/src/: client.rs  config.rs  dto.rs  migrations.rs  module.rs  repository.rs  routes.rs
crates/auth-github/tests/: callback.rs  start.rs
crates/auth-google/: CHANGELOG.md  Cargo.toml
crates/auth-google/migrations/: 0001_create_auth_google_schema.sql  0002_create_google_accounts.sql
crates/auth-google/src/: client.rs  config.rs  dto.rs  lib.rs  migrations.rs  module.rs  repository.rs  routes.rs
crates/auth-google/tests/: callback.rs  start.rs
crates/auth-oauth/: CHANGELOG.md  Cargo.toml
crates/auth-oauth/migrations/: 0001_create_auth_oauth_schema.sql  0002_create_oauth_flows.sql
crates/auth-oauth/src/: flow.rs  lib.rs  migrations.rs  module.rs
crates/auth-oauth/tests/: flow.rs
crates/auth-oidc/: CHANGELOG.md  Cargo.toml
crates/auth-oidc/migrations/: 0001_create_auth_oidc_schema.sql  0002_create_authorization_codes.sql
crates/auth-oidc/src/: config.rs  dto.rs  lib.rs  migrations.rs  module.rs  repositories.rs  routes.rs
crates/auth-oidc/tests/: authorization_code.rs  token.rs
crates/auth-password/: CHANGELOG.md  Cargo.toml
crates/auth-password/migrations/: 0001_create_auth_password_schema.sql  0002_create_password_credentials.sql  0003_create_login_failures.sql  0004_add_login_failure_client_metadata.sql  0005_scope_login_failures_by_provider.sql
crates/auth-password/src/: admin.rs  config.rs  dto.rs  jwt.rs  lib.rs  migrations.rs  module.rs  password.rs  repositories.rs  resolver.rs  routes.rs
crates/auth-password/tests/: login_rate_limit.rs
crates/auth-phone/: CHANGELOG.md  Cargo.toml
crates/auth-phone/migrations/: 0001_create_auth_phone_schema.sql  0002_create_phone_identities.sql  0003_create_otp_challenges.sql  0004_create_password_credentials.sql  0004_migrate_password_state_to_auth_password.sql  0005_add_otp_start_rate_limit_index.sql  0005_create_password_failures.sql
crates/auth-phone/src/: admin.rs  config.rs  dto.rs  lib.rs  migrations.rs  module.rs  otp.rs  password.rs  phone.rs  repositories.rs  routes.rs
crates/auth-phone/tests/: otp_flow.rs  password_flow.rs
crates/auth/migrations/: 0002_create_auth_core_tables.sql  0003_add_user_disable_details.sql  0004_add_session_device.sql  0005_add_session_client_metadata.sql  0006_add_user_anonymous_flag.sql
crates/auth/src/: admin.rs  config.rs  dto.rs  lib.rs  migrations.rs  models.rs  module.rs  public.rs  redis_cache.rs  repositories.rs  resolver.rs  routes.rs  session_policy.rs
crates/auth/tests/: admin_data.rs  anonymous_identity.rs  session_policy.rs
docs/: release.md
docs/agents/: issue-tracker.md
docs/superpowers/plans/: 2026-07-03-auth-oauth-github.md  2026-07-07-auth-phone.md
docs/superpowers/specs/: 2026-07-03-auth-oauth-github.md  2026-07-07-auth-phone-design.md
