[workspace]
resolver = "2"
members = ["crates/auth", "crates/auth-anonymous", "crates/auth-device", "crates/auth-github", "crates/auth-google", "crates/auth-oauth", "crates/auth-oidc", "crates/auth-password", "crates/auth-phone"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.94"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
argon2 = "0.5.3"
auth = { package = "lenso-module-auth", path = "crates/auth", version = "0.1.6" }
auth-anonymous = { package = "lenso-module-auth-anonymous", path = "crates/auth-anonymous", version = "0.1.0" }
auth-device = { package = "lenso-module-auth-device", path = "crates/auth-device", version = "0.1.1" }
auth-github = { package = "lenso-module-auth-github", path = "crates/auth-github", version = "0.1.0" }
auth-google = { package = "lenso-module-auth-google", path = "crates/auth-google", version = "0.1.0" }
auth-oauth = { package = "lenso-module-auth-oauth", path = "crates/auth-oauth", version = "0.1.0" }
auth-oidc = { package = "lenso-module-auth-oidc", path = "crates/auth-oidc", version = "0.1.0" }
auth-phone = { package = "lenso-module-auth-phone", path = "crates/auth-phone", version = "0.1.0" }
chrono = { version = "0.4", features = ["serde"] }
getrandom = "0.4"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
platform-core = { package = "lenso-platform-core", version = "0.1.5" }
platform-http = { package = "lenso-platform-http", version = "0.1.3" }
platform-module = { package = "lenso-platform-module", version = "0.1.4" }
platform-runtime = { package = "lenso-platform-runtime", version = "0.1.2" }
platform-testing = { package = "lenso-platform-testing", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tower = "0.5"
utoipa = { version = "5.5", features = ["axum_extras", "chrono", "uuid"] }
redis = { version = "1.2", default-features = false, features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

[patch.crates-io]
lenso-contracts = { git = "https://github.com/LioRael/lenso.git", branch = "main" }
lenso-platform-core = { git = "https://github.com/LioRael/lenso.git", branch = "main" }
lenso-platform-http = { git = "https://github.com/LioRael/lenso.git", branch = "main" }
lenso-platform-module = { git = "https://github.com/LioRael/lenso.git", branch = "main" }
lenso-platform-runtime = { git = "https://github.com/LioRael/lenso.git", branch = "main" }
lenso-platform-testing = { git = "https://github.com/LioRael/lenso.git", branch = "main" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
