[package]
name = "lenso-module-auth-anonymous"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "First-party anonymous auth provider module for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso-auth-module"
homepage = "https://github.com/LioRael/lenso-auth-module"
readme = "../../README.md"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "auth", "anonymous"]
rust-version.workspace = true

[lib]
name = "auth_anonymous"
path = "src/lib.rs"

[dependencies]
auth.workspace = true
axum.workspace = true
chrono.workspace = true
getrandom.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true
serde.workspace = true
sqlx.workspace = true
utoipa.workspace = true

[dev-dependencies]
platform-testing.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
