[package]
name = "lenso-module-auth-device"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "First-party auth device policy module for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso-auth-module"
homepage = "https://github.com/LioRael/lenso-auth-module"
readme = "../../README.md"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "auth"]
rust-version.workspace = true

[lib]
name = "auth_device"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
auth.workspace = true
chrono.workspace = true
platform-core.workspace = true
platform-module.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true

[dev-dependencies]
platform-runtime.workspace = true
platform-testing.workspace = true
tokio.workspace = true

[lints]
workspace = true
