[package]
name = "lenso-module-auth-github"
version = "0.1.1"
edition.workspace = true
license = "MIT"
description = "First-party GitHub OAuth provider module for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso-auth-module"
homepage = "https://github.com/LioRael/lenso-auth-module"
readme = "../../README.md"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "auth", "github"]
rust-version.workspace = true

[lib]
name = "auth_github"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
auth.workspace = true
auth-oauth.workspace = true
axum.workspace = true
chrono.workspace = true
getrandom.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
utoipa.workspace = true

[dev-dependencies]
platform-testing.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
