[package]
name = "lenso-module-auth-oauth"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "First-party OAuth client substrate module for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso-auth-module"
homepage = "https://github.com/LioRael/lenso-auth-module"
readme = "../../README.md"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "auth", "oauth"]
rust-version.workspace = true

[lib]
name = "auth_oauth"
path = "src/lib.rs"

[dependencies]
auth.workspace = true
chrono.workspace = true
getrandom.workspace = true
platform-core.workspace = true
platform-module.workspace = true
sha2.workspace = true
sqlx.workspace = true

[dev-dependencies]
platform-testing.workspace = true
tokio.workspace = true

[lints]
workspace = true
