[package]
name = "lenso-module-auth-phone"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "First-party phone auth provider module for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso-auth-module"
homepage = "https://github.com/LioRael/lenso-auth-module"
readme = "../../README.md"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "auth", "phone"]
rust-version.workspace = true

[lib]
name = "auth_phone"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
auth.workspace = true
auth-password = { package = "lenso-module-auth-password", path = "../auth-password", version = "0.1.8" }
axum.workspace = true
chrono.workspace = true
getrandom.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
utoipa.workspace = true

[dev-dependencies]
platform-runtime.workspace = true
platform-testing.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
