[package]
name = "lenso-module-auth"
version = "0.1.8"
edition.workspace = true
license = "MIT"
description = "First-party auth anchor module for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso-auth-module"
homepage = "https://github.com/LioRael/lenso-auth-module"
readme = "../../README.md"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "auth"]
rust-version.workspace = true

[lib]
name = "auth"
path = "src/lib.rs"

[features]
default = []
redis = ["dep:redis"]

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
getrandom.workspace = true
platform-core.workspace = true
platform-http.workspace = true
platform-module.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tracing.workspace = true
utoipa.workspace = true
redis = { workspace = true, optional = true }

[dev-dependencies]
platform-testing.workspace = true
platform-runtime.workspace = true
tokio.workspace = true

[lints]
workspace = true
